Sweeping fixes with updating docs, adjusting code and overall cleanup
- Adjust Constraints to have a type to indicate to users of the API what each predicate is used for
- Switch to only using endec for serialization and abstracting serialization of the given config wrapper to a ConfigSerializer allowing for other formats than just Jankson
- Update ModMenu annoation to use the modid of the config wrapper annotation
- Cleanup predicate handling for OptionComponents and use more statically defined methods
- Refactor location of code and remove commented out code combined with making code prettyer